2007-07-03  Tobias Burnus  <burnus@net-b.de>

PR fortran/25062
	* resolve.c (resolve_common_blocks): New check function.
	(resolve_types): Use it.

2007-07-03  Tobias Burnus  <burnus@net-b.de>

	PR fortran/25062
	* common_7.f90: New.
	* common_8.f90: New.
	* common_9.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@126279 138bc75d-0d04-0410-961f-82ee72b054a4